Adicionado uma nova página de receita, link para navegação entre elas

--- a/Recipes/macncheese.html
+++ b/Recipes/macncheese.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Receitas Odin</h1>
-    <a href="Recipes/macncheese.html">Homemade Mac and Cheese</a>
+    <h1>Homemade Mac and Cheese</h1>
+    
 </body>
 </html>
