Foi criada a estrutura do conteúdo, inserção da imagem da receita pronta, lista de ingredientes e passos do preparo.

--- a/Recipes/macncheese.html
+++ b/Recipes/macncheese.html
@@ -7,6 +7,27 @@
 </head>
 <body>
     <h1>Homemade Mac and Cheese</h1>
-    
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Fe151f8344e588d94dfc9baf78e562dbd%2F1713363411125IMG_4457.jpeg&q=60&c=sc&poi=auto&orient=true&h=512" alt="Imagem do prato macncheese preparado">
+
+    <h2>Recipe</h2>
+
+    <h3>Ingredients</h3>
+
+    <ul>
+        <li><strong>Macaroni</strong></li>
+        <li><strong>Butter an Flour</strong></li>
+        <li><strong>Milk</strong></li>
+        <li><strong>Cheese</strong></li>
+        <li><strong>Seasonings</strong></li>
+        <li><strong>Brea crumbs</strong></li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Boil the noodles, drain, and transfer to a prepared baking dish.</li>
+        <li>Make the cheese sauce, pour the sauce over the noodles, and stir.</li>
+        <li>Make the topping, spread it over macaroni and cheese, and sprinkle with paprika.</li>
+        <li>Bake the mac and cheese until the topping is golden brown.</li>
+    </ol>
 </body>
 </html>
