--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Receitas Odin</h1>
     <a href="Recipes/macncheese.html">Homemade Mac and Cheese</a>
+    <a href="Recipes/bananapudding.html">Banana Pudding</a>
+    <a href="Recipes/roastbeef.html">Roast Beef and Cheddar Sliders</a>
 </body>
 </html>
