--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 </head>
 <body>
     <h1>Receitas Odin</h1>
-    <a href="Recipes/macncheese.html">Homemade Mac and Cheese</a>
-    <a href="Recipes/bananapudding.html">Banana Pudding</a>
-    <a href="Recipes/roastbeef.html">Roast Beef and Cheddar Sliders</a>
+    <ul>
+        <li><a href="Recipes/macncheese.html">Homemade Mac and Cheese</a></li>
+        <li><a href="Recipes/bananapudding.html">Banana Pudding</a></li>
+        <li><a href="Recipes/roastbeef.html">Roast Beef and Cheddar Sliders</a></li>
+    </ul>
+  
+   
+    
 </body>
 </html>
