--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Receitas Odin</h1>
+    <h1>Odin's Recipes</h1>
     <ul>
         <li><a href="Recipes/macncheese.html">Homemade Mac and Cheese</a></li>
         <li><a href="Recipes/bananapudding.html">Banana Pudding</a></li>
         <li><a href="Recipes/roastbeef.html">Roast Beef and Cheddar Sliders</a></li>
     </ul>
   
-   
-    
 </body>
 </html>
